# TSN

./: .gitignore  AI_PROJECT_OVERVIEW.md  ALMOST_THERE.md  BOOTSTRAP_READY.md  BOOTSTRAP_STATUS.md  BUG_FIXED.md  BUG_FOUND.md  CHANGELOG.md  CMakeLists.txt  CODEGEN_COMPLETE.md  CODEGEN_EXTENDED.md  COMMIT_MESSAGE.md  COMPILER_TS_COMPLETE.md  CONTRIBUTING.md  CONTROL_FLOW_COMPLETE.md  FFI_COMPLETE.md  FINAL_SESSION_SUMMARY.md  FORWARD_DECLARATIONS_COMPLETE.md  GLOBAL_ARRAYS_COMPLETE.md  GLOBAL_ASSIGNMENT_FIXED.md  INTEGRATION_COMPLETE.md  LICENSE  MODULAR_COMPILER.md  MODULE_SYSTEM_PLAN.md  MODULE_SYSTEM_STATUS.md  MODULE_SYSTEM_V2.md  NEXT_STEPS.md  NEXT_STEPS_VIETNAMESE.md  PARSER_COMPILATION_SUCCESS.md  PARSER_PROGRESS.md  PROGRESS_SUMMARY.md  README.md  ROADMAP.md  SELF_HOSTING_100_PERCENT_COMPLETE.md  SELF_HOSTING_BOOTSTRAP_COMPLETE.md  SELF_HOSTING_COMPLETE.md  SELF_HOSTING_FINAL.md  SELF_HOSTING_PLAN.md  SELF_HOST_PROGRESS.md  SESSION_COMPLETE.md  (+69 more)
Agent/: AGENTS.md
archive/: BINARY_EXPR_COMPLETE.md  BOOTSTRAP_COMPLETE.md  BOOTSTRAP_STATUS_CURRENT.md  BREAK_CONTINUE_COMPLETE.md  ELSE_STATEMENT_COMPLETE.md  SELF_HOSTING_ACHIEVED.md  SESSION_PROGRESS.md  VAR_DECL_COMPLETE.md  minimal_bootstrap.tsn  tsnc_full.tsn
compiler-ts/: .gitignore  README.md  compile.bat  compile.ps1  concat-modules.ts  deno.json  package.json  test-binary.tsn  test-complete.tsn  test-console.tsn  test-ffi.tsn  test-for-loop.tsn  test-global-assign.tsn  test-import.tsn  test-input.tsn  test-lexer.ts  test-mod3.tsn  test-parser.ts  test-simple.tsn  test-types-usage.tsn  tsconfig.json  tsn_runtime.c  tsnc.ps1
docs/: build_process.md  cross_module_generic_issue.md  generic_stabilization.md  (+3 more)
(+170 files in other folders)
